; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/realtek/extr_r8169_main.c_rtl8169_net_suspend.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/realtek/extr_r8169_main.c_rtl8169_net_suspend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.rtl8169_private = type { %struct.TYPE_2__, i32, i32 }
%struct.TYPE_2__ = type { i32 }

@RTL_FLAG_MAX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.net_device*)* @rtl8169_net_suspend to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rtl8169_net_suspend(%struct.net_device* %0) #0 {
  %2 = alloca %struct.net_device*, align 8
  %3 = alloca %struct.rtl8169_private*, align 8
  store %struct.net_device* %0, %struct.net_device** %2, align 8
  %4 = load %struct.net_device*, %struct.net_device** %2, align 8
  %5 = call %struct.rtl8169_private* @netdev_priv(%struct.net_device* %4)
  store %struct.rtl8169_private* %5, %struct.rtl8169_private** %3, align 8
  %6 = load %struct.net_device*, %struct.net_device** %2, align 8
  %7 = call i32 @netif_running(%struct.net_device* %6)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  br label %32

10:                                               ; preds = %1
  %11 = load %struct.rtl8169_private*, %struct.rtl8169_private** %3, align 8
  %12 = getelementptr inbounds %struct.rtl8169_private, %struct.rtl8169_private* %11, i32 0, i32 2
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @phy_stop(i32 %13)
  %15 = load %struct.net_device*, %struct.net_device** %2, align 8
  %16 = call i32 @netif_device_detach(%struct.net_device* %15)
  %17 = load %struct.rtl8169_private*, %struct.rtl8169_private** %3, align 8
  %18 = call i32 @rtl_lock_work(%struct.rtl8169_private* %17)
  %19 = load %struct.rtl8169_private*, %struct.rtl8169_private** %3, align 8
  %20 = getelementptr inbounds %struct.rtl8169_private, %struct.rtl8169_private* %19, i32 0, i32 1
  %21 = call i32 @napi_disable(i32* %20)
  %22 = load %struct.rtl8169_private*, %struct.rtl8169_private** %3, align 8
  %23 = getelementptr inbounds %struct.rtl8169_private, %struct.rtl8169_private* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load i32, i32* @RTL_FLAG_MAX, align 4
  %27 = call i32 @bitmap_zero(i32 %25, i32 %26)
  %28 = load %struct.rtl8169_private*, %struct.rtl8169_private** %3, align 8
  %29 = call i32 @rtl_unlock_work(%struct.rtl8169_private* %28)
  %30 = load %struct.rtl8169_private*, %struct.rtl8169_private** %3, align 8
  %31 = call i32 @rtl_pll_power_down(%struct.rtl8169_private* %30)
  br label %32

32:                                               ; preds = %10, %9
  ret void
}

declare dso_local %struct.rtl8169_private* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @netif_running(%struct.net_device*) #1

declare dso_local i32 @phy_stop(i32) #1

declare dso_local i32 @netif_device_detach(%struct.net_device*) #1

declare dso_local i32 @rtl_lock_work(%struct.rtl8169_private*) #1

declare dso_local i32 @napi_disable(i32*) #1

declare dso_local i32 @bitmap_zero(i32, i32) #1

declare dso_local i32 @rtl_unlock_work(%struct.rtl8169_private*) #1

declare dso_local i32 @rtl_pll_power_down(%struct.rtl8169_private*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
